<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/manufacturerName"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/manufacturer_name"
            android:inputType="text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="251dp" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/model_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="text" />

        <Button
            android:id="@+id/saveChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="277dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
