<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#222222"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_column="0"/>

            <EditText
                android:id="@+id/amount"
                android:layout_width="52dp"
                android:layout_height="41dp"
                android:layout_column="2"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center_vertical" />

            <Button
                android:id="@+id/increase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:layout_gravity="right"
                android:layout_column="2"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"/>

            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right"
                android:text="@string/edit" />

            <Button
                android:id="@+id/decrease_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:layout_column="2"
                android:layout_gravity="right"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/activation_row">

            <TextView
                android:id="@+id/active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:layout_column="1"
                android:layout_gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Switch
                android:id="@+id/activate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_column="2"
                android:layout_gravity="center"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
